feat: cchnge author type to user (#50)
